style: center content

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,1 +1,13 @@
 @import url("@canonical/styles");
+
+.app {
+  display: grid;
+  place-items: center;
+  place-content: center;
+  min-height: 100dvh;
+
+  button,
+  a {
+    width: fit-content;
+  }
+}
